WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302876
REGRESSION (
301162@main
): Focusing an invisible input element still draws the cursor with full opacity
https://bugs.webkit.org/show_bug.cgi?id=302876
Summary
REGRESSION (301162@main): Focusing an invisible input element still draws the...
jack
Reported
2025-11-20 08:50:02 PST
Created
attachment 477452
[details]
screen recording showing cusror still shown on an invisible element Before iOS 26, focusing an invisible input element would NOT draw the cursor, but now the cursor is shown as if the input element is visible - always at opacity: 1. Chrome draws the cursor at the opacity of the input element. Here is a small codepen:
https://codepen.io/Miodec/pen/ZYWXbqx
Why am reporting this as an issue: I am the developer of a typing website called monkeytype.com. Monkeytype relies on an invisible input element that is shown below a virtual word list and virtual caret. Because the cursor of the real input element is still drawn, users are reporting double cursors when typing on ios devices.
Attachments
screen recording showing cusror still shown on an invisible element
(5.26 MB, video/mp4)
2025-11-20 08:50 PST
,
jack
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-27 08:50:12 PST
<
rdar://problem/165489471
>
Wenson Hsieh
Comment 2
2025-12-01 10:46:14 PST
Thank you for the report!
Wenson Hsieh
Comment 3
2025-12-08 18:57:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55079
EWS
Comment 4
2025-12-09 07:43:03 PST
Committed
304160@main
(43de5fb39e91): <
https://commits.webkit.org/304160@main
> Reviewed commits have been landed. Closing PR #55079 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug