Source/WebKit/UIProcess/ios/WKContentViewInteraction.h
@@ -774,6 +774,7 @@ struct ImageAnalysisContextMenuActionData {
 
 - (void)_startSuppressingSelectionAssistantForReason:(WebKit::SuppressSelectionAssistantReason)reason;
 - (void)_stopSuppressingSelectionAssistantForReason:(WebKit::SuppressSelectionAssistantReason)reason;
+@property (nonatomic, readonly, getter=_isSuppressingSelectionAssistant) BOOL _suppressingSelectionAssistant;
 
 - (BOOL)_hasFocusedElement;
 - (void)_zoomToRevealFocusedElement;
